- Initial prototype of embeddable crash reports. This adds the ``UserReport`` model.
- Added basic UI reporting for status checks.
- Added celery/beat alive check.
- Added celery app version check.
- Added queue overview to internal administration.
- Upped TSDB's storage of 10s to 60m of data.
- Added protocol version 7 to client spec.
  - Adds 'fingerprint' attribute.

Version 7.6.2
-------------

- Improved (fixed?) static bundling in various conditions.

Version 7.6.1
-------------

- [Security] An XSS vulnerability was addressed with low cardinality tags and the stream filter box:
  https://github.com/getsentry/sentry/commit/364b959811561de83f29893e105cc590224edbee

Version 7.6.0
-------------

This releases entirely removes Access Groups. If you're upgrading from an installation that had yet to migrate away from this system you should first upgrade to a previous version, run the migration wizard, and then continue the upgrade.

- The project-wide Alert system has been removed (to be re-implemented in the future).
- Access groups have been permanently removed.
- Added 'access_token' to data blacklist.
- The legacy (unused) search tables have been removed.
- Upgrades must now be applied manually via ``sentry upgrade`` or with ``sentry start --upgrade``.
  (Don't forget to use ``--noinput`` if you're doing this via automated tooling!)
- ``Event.checksum`` and ``Group.checksum`` have been removed.
- The ``cleanup`` task has been removed (the command is still available).
- Various optimizations to ``cleanup`` for Postgres users.
- Within single organization mode users will automatically be added to the default organization.
- Added ``Organization.merge_to()`` helper to assist with merging organizations.
  (i.e. in an on-premise install which wants to convert to a single organization)
- New ``import`` and ``export`` commands now exist for creating backups of critical metadata
  (i.e. api keys, projects, user settings)

Version 7.5.6
-------------
