@@ -15,6 +15,7 @@ Version 7.7.0
 - Upped TSDB's storage of 10s to 60m of data.
 - Added protocol version 7 to client spec.
   - Adds 'fingerprint' attribute.
+- The behavior of SENTRY_ENABLE_EXPLORE_USERS is now default and the setting has been removed.
 
 Version 7.6.2
 -------------
